<resources>
    <string name="app_name">Trainer Assistant</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Log out</string>

    <string name="statistika">Statistika</string>
    <string name="pregledClanova">Pregled članova</string>
    <string name="noviTrening">Novi trening</string>
    <string name="odabirOpcija">Odabir opcija</string>
    <string name="popisClanova">Popis članova</string>
    <string name="odabirDisciplina">Odabir disciplina</string>
    <string name="najbolji">Najbolji</string>
    <string name="prisutnost">Prisutnost</string>
    <string name="dalje">Dalje</string>

    <string name="title_activity_login">Login</string>
    <string name="login_picture_name">loginAppLogo</string>
    <string name="prompt_email">trener@trener.tr ili trener</string>
    <string name="prompt_password">trener</string>
    <string name="action_sign_in">Prijava ili registracija</string>
    <string name="action_sign_in_short">Prijava</string>
    <string name="prijava">Prijava</string>

    <string name="string_enter_name">Enter your name</string>
    <string name="string_choose_username">Choose your username</string>
    <string name="string_choose_password">Choose your password</string>
    <string name="string_enter_email">Enter your email</string>
    <string name="button_register">Register</string>
    <string name="PrezIme">Ime i prezime</string>
    <string name="GodRodj">Godina rođenja</string>
    <string name="IdTrener">Id trenera</string>
    <string name="Dodaj">Dodaj</string>
    <string name="PopisSportaša">Popis sportaša</string>
</resources>
