<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:id="@+id/activity.login"
    android:weightSum="1"
    android:background="#19543b">
    <!-- GORE sam dodao sam za android:id="@+id/" ovaj  activity.login, kao ID za LinearLayout, ne znam jel tako zapravo i ide -->


    <!-- Login progress -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/login_picture_name"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:weightSum="1">

        <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:singleLine="true" />

        <EditText android:id="@+id/password" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />

        <Button android:id="@+id/btn_prijava"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/prijava"
            android:textStyle="bold"
            android:layout_weight="17.53" />

        <TextView
            android:id="@+id/tv_registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Register here"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>

